--- a/Library.cbp
+++ b/Library.cbp
@@ -35,15 +35,20 @@
 			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="include/Admin.h" />
+		<Unit filename="include/AppController.h" />
 		<Unit filename="include/Book.h" />
+		<Unit filename="include/BookStorage.h" />
+		<Unit filename="include/IBookStorage.h" />
 		<Unit filename="include/Library.h" />
 		<Unit filename="include/Member.h" />
 		<Unit filename="include/User.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/Admin.cpp" />
+		<Unit filename="src/AppController.cpp" />
 		<Unit filename="src/Book.cpp" />
+		<Unit filename="src/BookStorage.cpp" />
+		<Unit filename="src/IBookStorage.cpp" />
 		<Unit filename="src/Library.cpp" />
-		<Unit filename="src/Libraryy.cpp" />
 		<Unit filename="src/Member.cpp" />
 		<Unit filename="src/User.cpp" />
 		<Extensions />
